aligned cursor correctly and made adjustment to allow clicking elements

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    cursor: none;
+    /* cursor: none; */
 }
 
 #spawn {
@@ -21,6 +21,7 @@ body {
     border-radius: 50%;
     position: absolute;
     z-index: 2;
+    pointer-events: none;
 }
 
 #outer-circle, #inner-circle {
